# hnsw-benchmark-remote

./: CMakeLists.txt
app/src/: CMakeLists.txt
app/src/example/: CMakeLists.txt  epsilon_search_test.cpp  example_epsilon_search.cpp  example_filter.cpp  example_mt_filter.cpp  example_mt_replace_deleted.cpp  example_mt_search.cpp  example_multivector_search.cpp  example_replace_deleted.cpp  example_search.cpp  multiThreadLoad_test.cpp  multiThread_replace_test.cpp  multivector_search_test.cpp  searchKnnCloserFirst_test.cpp  searchKnnWithFilter_test.cpp  sift_1b.cpp  sift_test.cpp  updates_test.cpp
app/src/hnswlib-test/: CMakeLists.txt
app/src/hnswlib-test/enron-test/: CMakeLists.txt  enron-hnswlib-test.cpp
app/src/hnswlib-test/gist-test/: CMakeLists.txt  gist-hnswlib-test.cpp
app/src/hnswlib-test/glove-200-angular-test/: CMakeLists.txt  glove-200-angular-hnswlib-test.cpp
app/src/hnswlib-test/nytimes-256-angular-test/: AngularSpace.h  CMakeLists.txt  nytimes-256-angular-hnswlib-test.cpp
app/src/hnswlib-test/sift-test/: CMakeLists.txt  sift-hnswlib-test.cpp
app/src/hnswlib-test/siftsmall-test/: CMakeLists.txt  siftsmall-hnswlib-test.cpp
app/src/hnswlib-test/trevi-test/: CMakeLists.txt  trevi-hnswlib-test.cpp
app/src/n2-test/: CMakeLists.txt
app/src/n2-test/nytimes-256-angular-test/: CMakeLists.txt  nytimes-256-angular-n2-test.cpp
lib/: CMakeLists.txt
result/hnswlib-test/enron/: enron_recall_qps_result.csv
result/hnswlib-test/gist/: gist_recall_qps_result.csv
result/hnswlib-test/sift/: sift_recall_qps_result.csv
result/hnswlib-test/siftsmall/: siftsmall_recall_qps_result.csv
result/hnswlib-test/trevi/: trevi_recall_qps_result.csv
